# copykitten

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  copykitten.pyi  pyproject.toml  requirements-dev.txt
.github/workflows/: build-test.yml  ci.yml  lint.yml  publish.yml  release.yml
python/copykitten/: __init__.py  _copykitten.pyi
src/: lib.rs
tests/: clipboard.py  conftest.py  test_lib.py  utils.py
