[package]
name = "copykitten"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "copykitten"
crate-type = ["cdylib"]

[dependencies]
arboard = "3.4.0"
pyo3 = { version =  "0.20.0", features = ["extension-module", "abi3-py38"] }

[profile.release]
strip = "symbols"
