[package]
name = "copykitten"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "copykitten"
crate-type = ["cdylib"]

[dependencies]
arboard = "3.6.1"
pyo3 = { version =  "0.26.0", features = ["extension-module", "abi3-py38"] }

[target.'cfg(target_os = "linux")'.dependencies]
daemonize = "0.5.0"

[profile.release]
strip = "symbols"
