[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "copykitten"
description = "A robust, dependency-free way to use the system clipboard in Python."
authors = [{ name = "Roman Vlasenko", email = "klavionik@gmail.com" }]
readme = "README.md"
homepage = "https://github.com/Klavionik/copykitten"
license = "MIT"
keywords = ["clipboard"]
requires-python = ">=3.8,<3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.vulture]
paths = ["python", "tests"]
ignore_names = ["read_*", "write_*"]

[tool.maturin]
python-source = "python"
module-name = "copykitten._copykitten"
